@@ -22,9 +22,9 @@
  Theme based on the style of the same name from pastie.caboo.se
 -->
 
-<style-scheme id="cobalt" name="Cobalt" version="1.0">
+<style-scheme id="cobalt" _name="Cobalt" version="1.0">
   <author>Will Farrington</author>
-  <description>Blue based color scheme</description>
+  <_description>Blue based color scheme</_description>
 
   <!-- Colors -->
   <color name="faded_yellow"                value="#ffee80"/>
