@@ -19,6 +19,7 @@ gtksourceview/language-specs/chdr.lang
 gtksourceview/language-specs/c.lang
 gtksourceview/language-specs/classic.xml
 gtksourceview/language-specs/cmake.lang
+gtksourceview/language-specs/cobalt.xml
 gtksourceview/language-specs/cpp.lang
 gtksourceview/language-specs/csharp.lang
 gtksourceview/language-specs/css.lang
