@@ -1,3 +1,7 @@
+2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* POTFILES.in: Updated.
+
 === gtksourceview 2.5.4 ===
 
 2009-01-29  Changwoo Ryu  <cwryu@debian.org>
