@@ -1,3 +1,8 @@
+2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/language-specs/cobalt.xml:
+	Mark strings for translation.
+
 2009-02-04  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/language-specs/cobalt.xml:
